--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   <!-- Google Search Console -->
   <meta name="google-site-verification" content="29Tyu8Xpd_rbET3ok-Rd7mvHfxsWeNUdXZ2LcAeeR0M" />
 
+  <!-- Tipografía -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
 </head>
-<body>
+<body class="grit-body">
+
+  <!-- Fondo fijo -->
+  <div class="background-layer"></div>
 
   <!-- Botón superior izquierdo -->
   <a class="top-left-button" href="episodios/index.html">🎧 Escuchar</a>
@@ -21,38 +25,35 @@
     <img src="assets/youtube-svgrepo-com copia.svg" alt="YouTube" width="32" height="32">
   </a>
 
-  <!-- Botón principal -->
+  <!-- Hero principal -->
   <div class="hero-container">
-    <a class="custom-button" href="https://y.at/🎧🎤🎥💪" target="_blank">
-      🎧🎤🎥💪
-    </a>
+    <a class="custom-button" href="https://y.at/🎧🎤🎥💪" target="_blank">🎧🎤🎥💪</a>
   </div>
 
-  <!-- Formulario -->
+  <!-- Formulario de contacto -->
   <div class="form-container">
     <form class="form-box" action="https://formspree.io/f/xkgbnjpr" method="POST">
       <h2>Contacto</h2>
-      <label for="email" style="color: #000;">Email</label>
+      <label for="email">Email</label>
       <input type="email" name="email" id="email" required />
-      <label for="message" style="color: #000;">Mensaje</label>
+      <label for="message">Mensaje</label>
       <textarea name="message" id="message" required rows="2"></textarea>
       <input type="hidden" name="_redirect" value="https://elgritcast.com/gracias.html">
       <button type="submit">Enviar</button>
     </form>
   </div>
 
-  <!-- Footer con íconos centrados -->
-  <footer style="text-align: center; padding: 1rem; font-size: 0.8rem;">
-    <a href="https://www.youtube.com/@elgritcast" target="_blank" style="margin: 0 0.5rem;">
+  <!-- Footer -->
+  <footer class="grit-footer">
+    <a href="https://www.youtube.com/@elgritcast" target="_blank">
       <img src="assets/youtube-svgrepo-com copia.svg" alt="YouTube" width="24" height="24">
     </a>
-    <a href="https://www.instagram.com/elgritcast/" target="_blank" style="margin: 0 0.5rem;">
+    <a href="https://www.instagram.com/elgritcast/" target="_blank">
       <img src="assets/instagram-svgrepo-com copia.svg" alt="Instagram" width="24" height="24">
     </a>
   </footer>
 
   <!-- GoatCounter -->
   <script data-goatcounter="https://elgritcast.goatcounter.com/count" async src="https://gc.zgo.at/count.js"></script>
-
 </body>
 </html>
