--- a/index.html
+++ b/index.html
@@ -4,56 +4,215 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>El Grit Cast</title>
-
-  <!-- Google Search Console -->
-  <meta name="google-site-verification" content="29Tyu8Xpd_rbET3ok-Rd7mvHfxsWeNUdXZ2LcAeeR0M" />
-
-  <!-- Tipografía -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style.css">
-</head>
-<body class="grit-body">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-  <!-- Fondo fijo -->
-  <div class="background-layer"></div>
+    html, body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #000;
+      background: url('assets/fondo.webp') no-repeat center center;
+      background-size: cover;
+      background-attachment: fixed;
+      color: #ffffff;
+      height: 100vh;
+    }
+
+    .hero-container {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .custom-button {
+      background-color: rgba(0, 0, 0, 0.75);
+      color: #ffffff;
+      font-weight: bold;
+      padding: 0.6rem 1.2rem;
+      border-radius: 50px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      text-decoration: none;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .custom-button:hover {
+      transform: scale(1.07);
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
+    }
+
+    .form-container {
+      display: flex;
+      justify-content: center;
+      padding: 2rem 0.5rem;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .form-box {
+      background-color: rgba(212, 211, 211, 0.85);
+      padding: 0.8rem 1rem;
+      border-radius: 12px;
+      max-width: 260px;
+      width: 100%;
+      text-align: left;
+      font-size: 0.7rem;
+    }
+
+    .form-box h2 {
+      font-size: 0.8rem;
+      color: #000;
+      margin-bottom: 0.4rem;
+    }
+
+    .form-box input,
+    .form-box textarea {
+      width: 100%;
+      padding: 0.3rem;
+      margin-bottom: 0.4rem;
+      border-radius: 4px;
+      border: none;
+      font-size: 0.7rem;
+    }
+
+    .form-box button {
+      background-color: #000;
+      color: #fff;
+      border: none;
+      padding: 0.3rem 0.8rem;
+      border-radius: 20px;
+      cursor: pointer;
+      font-size: 0.7rem;
+    }
+
+    .top-left-button {
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      background-color: transparent;
+      border: 2px solid #b8fc26;
+      color: #b8fc26;
+      padding: 0.4rem 1rem;
+      border-radius: 30px;
+      font-size: 0.9rem;
+      font-weight: bold;
+      text-decoration: none;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    .top-left-button:hover {
+      background-color: rgba(184, 252, 38, 0.1);
+      transform: scale(1.05);
+    }
+
+    .top-right-icon {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+    }
+
+    .top-right-icon img {
+      filter: brightness(0) invert(1);
+      transition: transform 0.2s ease;
+    }
+
+    .top-right-icon img:hover {
+      transform: scale(1.1);
+    }
+
+    .social-icons-bottom {
+      margin-top: 1rem;
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+    }
+
+    .social-icons-bottom img {
+      width: 24px;
+      height: 24px;
+      filter: brightness(0) invert(1);
+      transition: transform 0.2s ease;
+    }
+
+    .social-icons-bottom img:hover {
+      transform: scale(1.1);
+    }
+
+    @media (max-width: 600px) {
+      .custom-button {
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+      }
+
+      .form-box {
+        padding: 0.7rem 0.8rem;
+      }
+
+      .top-left-button {
+        font-size: 0.75rem;
+        padding: 0.3rem 0.8rem;
+      }
+
+      .top-right-icon img {
+        width: 24px;
+        height: 24px;
+      }
+    }
+  </style>
+</head>
+<body>
 
   <!-- Botón superior izquierdo -->
   <a class="top-left-button" href="episodios/index.html">🎧 Escuchar</a>
 
-  <!-- Ícono YouTube arriba derecha -->
-  <a href="https://www.youtube.com/@elgritcast" target="_blank" class="youtube-icon">
-    <img src="assets/youtube-svgrepo-com copia.svg" alt="YouTube" width="32" height="32">
-  </a>
-
-  <!-- Hero principal -->
-  <div class="hero-container">
-    <a class="custom-button" href="https://y.at/🎧🎤🎥💪" target="_blank">🎧🎤🎥💪</a>
+  <!-- Ícono de YouTube arriba derecha -->
+  <div class="top-right-icon">
+    <a href="https://www.youtube.com/@elgritcast" target="_blank">
+      <img src="assets/youtube-svgrepo-com copia.svg" alt="YouTube" width="28" height="28">
+    </a>
   </div>
 
-  <!-- Formulario de contacto -->
+  <!-- Botón central -->
+  <div class="hero-container">
+    <a class="custom-button" href="https://y.at/🎧🎤🎥💪" target="_blank">
+      🎧🎤🎥💪
+    </a>
+  </div>
+
+  <!-- Formulario -->
   <div class="form-container">
     <form class="form-box" action="https://formspree.io/f/xkgbnjpr" method="POST">
       <h2>Contacto</h2>
-      <label for="email">Email</label>
+      <label for="email" style="color: #000;">Email</label>
       <input type="email" name="email" id="email" required />
-      <label for="message">Mensaje</label>
+      <label for="message" style="color: #000;">Mensaje</label>
       <textarea name="message" id="message" required rows="2"></textarea>
       <input type="hidden" name="_redirect" value="https://elgritcast.com/gracias.html">
       <button type="submit">Enviar</button>
     </form>
-  </div>
 
-  <!-- Footer -->
-  <footer class="grit-footer">
-    <a href="https://www.youtube.com/@elgritcast" target="_blank">
-      <img src="assets/youtube-svgrepo-com copia.svg" alt="YouTube" width="24" height="24">
-    </a>
-    <a href="https://www.instagram.com/elgritcast/" target="_blank">
-      <img src="assets/instagram-svgrepo-com copia.svg" alt="Instagram" width="24" height="24">
-    </a>
-  </footer>
+    <!-- Íconos sociales debajo del formulario -->
+    <div class="social-icons-bottom">
+      <a href="https://www.youtube.com/@elgritcast" target="_blank">
+        <img src="assets/youtube-svgrepo-com copia.svg" alt="YouTube">
+      </a>
+      <a href="https://www.instagram.com/elgritcast/" target="_blank">
+        <img src="assets/instagram-svgrepo-com copia.svg" alt="Instagram">
+      </a>
+    </div>
+  </div>
 
   <!-- GoatCounter -->
   <script data-goatcounter="https://elgritcast.goatcounter.com/count" async src="https://gc.zgo.at/count.js"></script>
+
 </body>
 </html>
