--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
     body {
       margin: 0;
-      font-family: 'Space Grotesk', Arial, sans-serif;
+      font-family: 'n27regular', Arial, sans-serif;
       background: var(--color-bg);
       color: var(--color-dark);
       min-height: 100vh;
@@ -97,6 +97,40 @@
       border-bottom: 2px solid var(--color-dark);
       outline: none;
     }
+
+    /* Menu hamburguesa móvil */
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      width: 28px;
+      height: 22px;
+      justify-content: space-between;
+    }
+    .menu-toggle div {
+      height: 4px;
+      background: var(--color-dark);
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
+    nav.mobile-hidden {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 72px;
+      right: 32px;
+      background: var(--color-bg);
+      border: 3px solid var(--color-dark);
+      border-radius: 10px;
+      box-shadow: 8px 8px 0 var(--color-shadow);
+      padding: 16px;
+      min-width: 160px;
+      z-index: 1100;
+    }
+    nav.mobile-visible {
+      display: flex;
+    }
+
     /* -------- HERO -------- */
     .hero {
       display: flex;
@@ -105,58 +139,61 @@
       justify-content: center;
       gap: 52px;
       padding: 72px 6vw 44px 6vw;
-      background: #d3d4d4;
+      background: var(--color-bg);
+      flex-wrap: wrap;
     }
     .hero-doodle {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100%;
-    }
-    .hero-img {
+      flex-shrink: 0;
       max-width: 390px;
-      min-width: 200px;
       width: 27vw;
       height: auto;
       border-radius: 18px;
-      box-shadow: 0px 12px 0 #373737;
+      box-shadow: 0 12px 0 var(--color-dark);
       background: #fff;
-      margin: 0;
+      border: 4px solid var(--color-dark);
+    }
+    .hero-doodle img {
+      width: 100%;
+      height: auto;
       display: block;
-      border: 4px solid #373737;
+      border-radius: 14px;
     }
     .hero-content {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      max-width: 750px;
+      width: 100%;
     }
     .frase-hero-bloque {
-      background: #b8fc26;
+      background: var(--color-main);
       border-radius: 22px;
-      box-shadow: 12px 12px 0 #373737;
+      box-shadow: 12px 12px 0 var(--color-shadow);
       padding: 34px 38px 26px 38px;
       margin-bottom: 30px;
       display: flex;
       align-items: center;
       justify-content: center;
-      max-width: 750px;
+      border: 4px solid var(--color-dark);
       width: 100%;
-      border: 4px solid #373737;
     }
     .frase-hero {
       font-family: 'n27regular', Arial, sans-serif;
       font-size: 2.7rem;
       font-weight: 700;
       letter-spacing: 0.07em;
-      color: #373737;
+      color: var(--color-dark);
       line-height: 1.05;
       margin: 0;
       text-align: center;
       text-transform: uppercase;
       text-align-last: center;
       width: 100%;
-      align-self: center;
+      user-select: none;
     }
     .hero-buttons {
       display: flex;
@@ -164,6 +201,7 @@
       justify-content: center;
       width: 100%;
       margin-bottom: 8px;
+      flex-wrap: wrap;
     }
     .btn {
       display: inline-block;
@@ -174,23 +212,25 @@
       border-radius: 13px;
       cursor: pointer;
       text-decoration: none;
-      box-shadow: 3px 3px 0 #b8fc26;
+      box-shadow: 3px 3px 0 var(--color-main);
       transition: background .2s, color .2s;
-      background: #373737;
-      color: #b8fc26;
+      background: var(--color-dark);
+      color: var(--color-main);
       text-align: center;
+      white-space: nowrap;
     }
     .btn.secondary {
       background: #fff;
-      color: #373737;
-      border: 2px solid #373737;
-      box-shadow: 3px 3px 0 #b8fc26;
+      color: var(--color-dark);
+      border: 2px solid var(--color-dark);
+      box-shadow: 3px 3px 0 var(--color-main);
     }
     .btn.primary:hover,
     .btn.secondary:hover {
       filter: brightness(1.13);
       transform: translateY(-3px) scale(1.05);
     }
+
     /* -------- BLOQUES HORIZONTALES -------- */
     .blocks-horizontal {
       display: flex;
@@ -221,6 +261,7 @@
       font-size: 1.3rem;
       margin-bottom: 18px;
       letter-spacing: 1px;
+      user-select: none;
     }
     .episodes-list {
       list-style: none;
@@ -244,8 +285,9 @@
       justify-content: center;
       background: var(--color-bg);
       border-radius: 7px;
-      border: 1.5px solid #373737;
+      border: 1.5px solid var(--color-dark);
       margin-bottom: 10px;
+      user-select: none;
     }
     .episode-info {
       width: 100%;
@@ -253,7 +295,7 @@
     .newsletter-form input[type="email"] {
       width: 95%;
       padding: 10px;
-      border: 2px solid #373737;
+      border: 2px solid var(--color-dark);
       border-radius: 6px;
       margin-bottom: 12px;
       font-size: 1rem;
@@ -269,12 +311,13 @@
       font-weight: bold;
       cursor: pointer;
       margin-top: 6px;
+      user-select: none;
     }
     .newsletter-form iframe {
       width: 100%;
       min-width: 200px;
       border-radius: 12px;
-      border: 1.5px solid #373737;
+      border: 1.5px solid var(--color-dark);
       background: #fff;
       margin: 0 auto;
       display: block;
@@ -286,10 +329,10 @@
       margin: 38px 0 0 0;
     }
     .form-box {
-      background: #b8fc26;
-      border: 3px solid #373737;
+      background: var(--color-main);
+      border: 3px solid var(--color-dark);
       border-radius: 18px;
-      box-shadow: 10px 10px 0 0 #373737;
+      box-shadow: 10px 10px 0 0 var(--color-dark);
       padding: 22px 26px 18px 26px;
       min-width: 230px;
       max-width: 320px;
@@ -297,35 +340,32 @@
       display: flex;
       flex-direction: column;
       gap: 11px;
+      user-select: none;
     }
     .form-box label {
       font-weight: 700;
-      color: #373737;
+      color: var(--color-dark);
       letter-spacing: 0.04em;
       font-size: 1.08rem;
       margin-bottom: 2px;
     }
     .form-box input[type="email"],
     .form-box textarea {
-      border: 2px solid #373737;
+      border: 2px solid var(--color-dark);
       border-radius: 7px;
       padding: 9px;
       font-size: 1.03rem;
       margin-bottom: 6px;
       background: #fff;
-      color: #373737;
+      color: var(--color-dark);
       font-family: inherit;
       width: 100%;
       box-sizing: border-box;
-    }
-    .form-box textarea {
-      min-height: 54px;
-      max-height: 120px;
       resize: vertical;
     }
     .form-box button[type="submit"] {
-      background: #373737;
-      color: #b8fc26;
+      background: var(--color-dark);
+      color: var(--color-main);
       font-weight: bold;
       border: none;
       border-radius: 7px;
@@ -333,15 +373,16 @@
       padding: 11px 0;
       margin-top: 9px;
       cursor: pointer;
-      box-shadow: 4px 4px 0 #373737;
+      box-shadow: 4px 4px 0 var(--color-dark);
       letter-spacing: 1px;
       text-transform: uppercase;
       transition: background .2s, color .2s;
+      user-select: none;
     }
     .form-box button[type="submit"]:hover {
-      background: #b8fc26;
-      color: #373737;
-      border: 2px solid #373737;
+      background: var(--color-main);
+      color: var(--color-dark);
+      border: 2px solid var(--color-dark);
     }
     .social-links {
       display: flex;
@@ -351,14 +392,22 @@
       margin: 35px 0 24px 0;
       flex-wrap: wrap;
     }
+    .social-links a {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      padding: 4px;
+      background: #fff;
+      border-radius: 9px;
+      transition: filter .2s, transform .2s;
+      cursor: pointer;
+      box-shadow: 1px 1px 5px rgba(0,0,0,.15);
+    }
     .social-links img {
       width: 38px;
       height: 38px;
-      transition: filter .2s, transform .2s;
       filter: grayscale(0) brightness(1);
-      cursor: pointer;
-      border-radius: 9px;
-      background: #fff;
+      border-radius: 6px;
     }
     .social-links img[alt="Substack"] {
       background: none;
@@ -366,7 +415,7 @@
       border: 1.5px solid #ff6719;
       padding: 2.5px;
     }
-    .social-links img:hover {
+    .social-links a:hover img {
       filter: drop-shadow(2px 2px 0 var(--color-main)) brightness(1.1);
       transform: scale(1.11) rotate(-4deg);
     }
@@ -377,6 +426,7 @@
       padding: 22px 10px 30px 10px;
       font-size: 1.04rem;
       margin-top: auto;
+      user-select: none;
     }
     .dev-link {
       color: var(--color-dark);
@@ -384,12 +434,14 @@
       text-decoration: none;
       border-bottom: 1.5px dashed var(--color-dark);
       transition: background .2s, color .2s;
-      padding: 2px 2px;
+      user-select: none;
     }
     .dev-link:hover {
       background: var(--color-main);
       color: var(--color-bg);
     }
+
+    /* RESPONSIVE */
     @media (max-width: 1100px) {
       .hero {
         flex-direction: column;
@@ -397,24 +449,24 @@
         gap: 28px;
         padding: 34px 3vw 18px 3vw;
       }
-      .hero-doodle, .hero-content {
-        width: 100%;
-      }
-      .hero-img {
+      .hero-doodle {
         max-width: 210px;
-        min-width: 90px;
         width: 37vw;
+        border-radius: 14px;
       }
       .frase-hero-bloque {
         padding: 18px 8vw 18px 8vw;
         max-width: 99vw;
       }
       .frase-hero {
-        font-size: 1.25rem;
+        font-size: 1.8rem;
       }
       .hero-buttons {
         flex-wrap: wrap;
         gap: 8px;
+      }
+      nav {
+        gap: 1rem;
       }
     }
     @media (max-width: 800px) {
@@ -427,17 +479,30 @@
         align-items: center;
         width: 100%;
       }
-      .hero-img {
+      .hero-doodle {
         max-width: 110px;
-        min-width: 70px;
         width: 54vw;
       }
       .frase-hero {
-        font-size: 1rem;
+        font-size: 1.2rem;
         text-align: center;
       }
       .frase-hero-bloque {
         padding: 10px 4vw 10px 4vw;
+      }
+      nav {
+        position: relative;
+      }
+      nav a {
+        font-size: 1rem;
+      }
+      /* Hide nav links by default on mobile */
+      nav.mobile-hidden {
+        display: none;
+      }
+      /* Show hamburger menu */
+      .menu-toggle {
+        display: flex;
       }
     }
   </style>
@@ -449,7 +514,13 @@
     <div class="header-center">
       <a class="btn-yat" href="https://y.at/🎧🎤🎥💪" target="_blank" rel="noopener">🎧🎤🎥💪 y.at</a>
     </div>
-    <nav>
+    <!-- Menu Hamburguesa toggle -->
+    <div class="menu-toggle" aria-label="Toggle navigation" tabindex="0" role="button" aria-expanded="false">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav class="mobile-hidden" role="navigation" aria-label="Menú principal">
       <a href="#">Home</a>
       <a href="episodios/index.html">Episodios</a>
       <a href="#nft">NFT Colección</a>
@@ -458,7 +529,7 @@
   </header>
 
   <!-- HERO -->
-  <section class="hero">
+  <section class="hero" role="region" aria-label="Presentación principal">
     <div class="hero-doodle">
       <img class="hero-img" src="podcast_doodle-removebg-preview.png" alt="Podcast Doodle Hero" />
     </div>
@@ -469,10 +540,10 @@
         </h1>
       </div>
       <div class="hero-buttons">
-        <a class="btn primary" href="https://youtube.com/@elgritcast" target="_blank">
+        <a class="btn primary" href="https://youtube.com/@elgritcast" target="_blank" rel="noopener">
           <img src="youtube_logo_vactor.svg" alt="YouTube" style="height:22px;vertical-align:middle;margin-right:8px;"> YouTube
         </a>
-        <a class="btn secondary" href="episodios/index.html">
+        <a class="btn secondary" href="episodios/index.html" rel="noopener">
           Episodios
         </a>
       </div>
@@ -480,24 +551,24 @@
   </section>
 
   <!-- BLOQUES HORIZONTALES -->
-  <div class="blocks-horizontal">
+  <div class="blocks-horizontal" role="region" aria-label="Secciones principales">
     <section class="section-block" id="nft">
       <h2>NFT Colección</h2>
       <img src="https://via.placeholder.com/110x110?text=NFT+Hero" alt="NFT Hero" style="border-radius:14px; margin-bottom:10px;">
       <p>Descubre a los héroes de GRIT en nuestra colección NFT. ¡Próximamente Julio César!</p>
     </section>
 
-    <section class="section-block newsletter-form">
+    <section class="section-block newsletter-form" aria-label="Suscripción al newsletter">
       <h2>Suscríbete a nuestro Newsletter</h2>
-      <iframe src="https://elgritcast.substack.com/embed" width="100%" height="320" style="border:1.5px solid #373737; background:white; border-radius:12px;" frameborder="0" scrolling="no"></iframe>
+      <iframe src="https://elgritcast.substack.com/embed" width="100%" height="320" style="border:1.5px solid var(--color-dark); background:#fff; border-radius:12px;" frameborder="0" scrolling="no" title="Formulario de suscripción a newsletter"></iframe>
     </section>
 
     <section class="section-block" id="episodios">
       <h2>Último episodio</h2>
       <ul class="episodes-list">
         <li>
-          <span class="episode-audio">
-            <img src="youtube_logo_vactor.svg" alt="Audio episodio" width="30" />
+          <span class="episode-audio" aria-hidden="true">
+            <img src="youtube_logo_vactor.svg" alt="" width="30" />
           </span>
           <div class="episode-info">
             <strong>Episodio 015: Un Mensaje Importante a las Mujeres</strong><br>
@@ -507,40 +578,40 @@
             <source src="https://pub-588137ed925246f1a847e7b1a862df78.r2.dev/elgritcast-ep-015-lisbeth-dos-ramos-ID3.MP3" type="audio/mpeg">
             Tu navegador no soporta el elemento de audio.
           </audio>
-          <a class="btn secondary" style="margin-top:10px;" href="episodios/index.html">Escuchar todos los episodios</a>
+          <a class="btn secondary" style="margin-top:10px;" href="episodios/index.html" rel="noopener">Escuchar todos los episodios</a>
         </li>
       </ul>
     </section>
   </div>
 
   <!-- FORMULARIO CONTACTO -->
-  <section id="contacto" class="form-container">
+  <section id="contacto" class="form-container" role="region" aria-label="Formulario de contacto">
     <form class="form-box" action="https://formspree.io/f/xkgbnjpr" method="POST">
-      <h2 style="color:#373737;">Contacto</h2>
+      <h2 style="color:var(--color-dark);">Contacto</h2>
       <label for="email">Email</label>
       <input type="email" name="email" id="email" required />
       <label for="message">Mensaje</label>
       <textarea name="message" id="message" required rows="4"></textarea>
-      <input type="hidden" name="_redirect" value="https://elgritcast.com/gracias.html">
+      <input type="hidden" name="_redirect" value="https://elgritcast.com/gracias.html" />
       <button type="submit">Enviar</button>
     </form>
   </section>
 
   <!-- REDES SOCIALES -->
-  <div class="social-links">
-    <a href="https://youtube.com/@elgritcast" target="_blank" title="YouTube">
+  <div class="social-links" role="contentinfo" aria-label="Redes sociales">
+    <a href="https://youtube.com/@elgritcast" target="_blank" title="YouTube" rel="noopener">
       <img src="youtube_logo_vactor.svg" alt="YouTube" />
     </a>
-    <a href="https://t.me/+8xweB6VJ4ZsyNmM0" target="_blank" title="Telegram">
+    <a href="https://t.me/+8xweB6VJ4ZsyNmM0" target="_blank" title="Telegram" rel="noopener">
       <img src="Telegram Messenger New-01.svg" alt="Telegram" />
     </a>
-    <a href="https://instagram.com/elgritcast" target="_blank" title="Instagram">
+    <a href="https://instagram.com/elgritcast" target="_blank" title="Instagram" rel="noopener">
       <img src="fd8030a8e325fbf76bcad74cb99a1f99.svg" alt="Instagram" />
     </a>
-    <a href="https://bsky.app/profile/elgritcast.bsky.social" target="_blank" title="Bluesky">
+    <a href="https://bsky.app/profile/elgritcast.bsky.social" target="_blank" title="Bluesky" rel="noopener">
       <img src="bluesky_media_kit_logo_transparent_1_2-removebg-preview.png" alt="Bluesky" />
     </a>
-    <a href="https://substack.com/@elgritcast?utm_source=user-menu" target="_blank" title="Newsletter (Substack)">
+    <a href="https://substack.com/@elgritcast?utm_source=user-menu" target="_blank" title="Newsletter (Substack)" rel="noopener">
       <img src="substack.png" alt="Substack" />
     </a>
   </div>
@@ -551,7 +622,7 @@
       Copyright © El Grit Cast 2025
     </div>
     <div style="margin-bottom: 6px;">
-      <a href="#contacto" style="color:#373737;text-decoration:underline;font-weight:600;">Contacto</a>
+      <a href="#contacto" style="color:var(--color-dark);text-decoration:underline;font-weight:600;">Contacto</a>
       &nbsp;|&nbsp;
       Desarrollado por
       <a class="dev-link" href="https://www.cachicamo.studio/" target="_blank" rel="noopener">
@@ -563,5 +634,26 @@
       <a href="https://elgritcast.com/aviso-legal.html" style="color:#878787; text-decoration:underline;">Aviso legal</a>
     </div>
   </footer>
+
+  <script>
+    // Toggle menú hamburguesa móvil
+    const menuToggle = document.querySelector('.menu-toggle');
+    const navMenu = document.querySelector('nav');
+
+    menuToggle.addEventListener('click', () => {
+      const expanded = menuToggle.getAttribute('aria-expanded') === 'true' || false;
+      menuToggle.setAttribute('aria-expanded', !expanded);
+      navMenu.classList.toggle('mobile-visible');
+      navMenu.classList.toggle('mobile-hidden');
+    });
+    // Para cerrar menú si clic fuera en móvil
+    document.addEventListener('click', e => {
+      if (!navMenu.contains(e.target) && !menuToggle.contains(e.target) && navMenu.classList.contains('mobile-visible')) {
+        navMenu.classList.remove('mobile-visible');
+        navMenu.classList.add('mobile-hidden');
+        menuToggle.setAttribute('aria-expanded', false);
+      }
+    });
+  </script>
 </body>
 </html>
