El botón Y.AT siempre visible en móviles, responsive brutalista mejorado

--- a/index.html
+++ b/index.html
@@ -507,7 +507,14 @@
       }
     }
     @media (max-width: 370px) {
-      .btn-yat { display: none !important; }
+      .btn-yat { 
+        font-size: .72rem;
+        padding: 3px 5px;
+        max-width: 60px;
+        min-width: 0;
+        border-radius: 7px;
+        box-shadow: 2px 2px 0 var(--color-main);
+      }
     }
     @media (min-width: 801px) {
       .menu-toggle {
