Cambia el fondo del modal del manifiesto a #373737 y texto #d3d4d4

--- a/index.html
+++ b/index.html
@@ -575,13 +575,13 @@
       top: 0;
       width: 100vw;
       height: 100vh;
-      background: rgba(55,55,55,0.88);
+      background: rgba(55,55,55,0.97);
       align-items: center;
       justify-content: center;
     }
     #grit-modal-box {
-      background: #fff;
-      color: #373737;
+      background: #373737;
+      color: #d3d4d4;
       max-width: 480px;
       width: 94vw;
       padding: 2.2rem 1.8rem 1.8rem 1.8rem;
@@ -599,7 +599,7 @@
       font-size: 2rem;
       background: none;
       border: none;
-      color: #373737;
+      color: #d3d4d4;
       cursor: pointer;
       z-index: 2;
       transition: color .2s;
@@ -670,7 +670,7 @@
           y aun así, no se rindieron.
         </p>
         <p>
-          Creemos que el Grit —esa mezcla de pasión y perseverancia— se entrena, se construye y se contagia.<br>
+          Creemos que el Grit esa mezcla de pasión y perseverancia se entrena, se construye y se contagia.<br>
           Por eso, cada episodio es una chispa para quien hoy siente que ya no puede más.<br>
           Un recordatorio de que avanzar, aunque sea lento, siempre vale la pena.
         </p>
@@ -684,7 +684,7 @@
           Para quienes tropiezan, pero se levantan.<br>
           Para quienes no necesitan perfección, sino impulso.
         </p>
-        <p style="font-weight:bold; color:#373737; margin-bottom:0.2em;">
+        <p style="font-weight:bold; color:#b8fc26; margin-bottom:0.2em;">
           Bienvenida. Bienvenido. Estás en El Grit Cast.<br>
           <span style="color:#b8fc26;">Donde las historias no se rinden.</span>
         </p>
