Cambia el fondo del modal del manifiesto a #373737 y texto #d3d4d4

--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
           y aun así, no se rindieron.
         </p>
         <p>
-          Creemos que el Grit —esa mezcla de pasión y perseverancia— se entrena, se construye y se contagia.<br>
+          Creemos que el Grit esa mezcla de pasión y perseverancia se entrena, se construye y se contagia.<br>
           Por eso, cada episodio es una chispa para quien hoy siente que ya no puede más.<br>
           Un recordatorio de que avanzar, aunque sea lento, siempre vale la pena.
         </p>
@@ -708,7 +708,7 @@
   <!-- BLOQUES HORIZONTALES -->
   <div class="blocks-horizontal" role="region" aria-label="Secciones principales">
     <section class="section-block" id="nft">
-      <h2>NFT Colección</h2>
+      <h2>NFT Collection</h2>
       <img src="https://via.placeholder.com/110x110?text=NFT+Hero" alt="NFT Hero" style="border-radius:14px; margin-bottom:10px;">
     </section>
     <section class="section-block newsletter-form" aria-label="Suscripción al newsletter">
