Cambia el fondo del modal del manifiesto a #373737 y texto #d3d4d4

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
     <nav class="mobile-hidden" role="navigation" aria-label="Menú principal">
       <a href="#">Home</a>
       <a href="episodios/index.html">Episodios</a>
-      <a href="#nft">NFT Colección</a>
+      <a href="#nft">NFT Collection</a>
       <a href="#contacto">Contacto</a>
     </nav>
   </header>
